# ISpooferMotion

./: .eslintignore  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  splash.html  theme-editor.html  tsconfig.json  vite.config.ts
.github/workflows/: build-launcher.yml  build-linux.yml  build-mac.yml  build-plugin.yml  build-windows.yml  ci.yml  discord-release.yml  release.yml
launcher/: package-lock.json  package.json
launcher/scripts/: after-pack.js  build-win.js  clean.js
launcher/src/main/: main.js  shortcuts.js
launcher/src/popup/: popup.html
launcher/src/preload/: preload.js
public/: head.mtl
scripts/: apply-windows-icon.js  azure-sign.js  build-all.js  build-main.js  build-plugin-rbxmx.js  build-plugin.mjs  ci-install.js  clean.js  clear-dev-state.mjs  extract-release-notes.js  release-hardening-check.js  release-local-check.js  run-private-tests.js  run-syntax-check.js  test_cookie.js  upload-virustotal-release-assets.js  verify-release-assets.js
scripts/test-cases/: asset-download-fallback.test.js  common.test.js  payload-inspector.test.js  transfer-diagnostics.test.js  transfer-handlers.test.js
src/: App.tsx  index.css  main.tsx  splash.tsx  tauri-bridge.ts  theme-editor.tsx  vite-env.d.ts
src-tauri/: .rustfmt.toml  Cargo.toml  clippy.toml  tauri.conf.json  test_anim.xml
src-tauri/assets/icons/: icon.icns
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugin/: plugin.lua
src-tauri/src/: error.rs  lib.rs  server.rs  utils.rs
src-tauri/src/commands/: assets.rs  auth.rs  auth_templates.rs  fs.rs  ipc.rs  mod.rs  resolver.rs  session.rs  spoofer.rs  updater.rs
src/components/: AnimationPreview.tsx
src/components/layout/: OnboardingManager.tsx  QuickSettingsMenu.tsx  Sidebar.tsx  SplashLoader.tsx  StatusBar.tsx  Titlebar.tsx
src/components/modals/: CreditsModal.tsx
src/components/views/: AssetExplorer.tsx  ConfigView.tsx  DebugConsole.tsx  HomeView.tsx  (+4 more)
src/contexts/: ConfigContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useThemeHistory.ts
src/ism-library/: index.ts
src/main/: app.js  app.ts  window.js  window.ts
src/plugin/: plugin.lua
src/preload/: preload.js
src/renderer/: index.html
src/renderer-react/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/types/: global.d.ts
src/utils/: debugLogger.ts  i18n.ts  oauthConfig.ts  robloxAnimParser.ts  robloxAudio.ts  robloxProfiles.ts  robloxRig.ts  smoothScroll.ts
(+111 files in other folders)
